fixed team results collapse bug

--- a/desktop/css/team.css
+++ b/desktop/css/team.css
@@ -153,7 +153,6 @@ body {
 .results-header {
   font-family: Bebas Neue, sans-serif;
   font-size: 200%;
-  margin-bottom: 20px;
 }
 .results-header:hover {
   cursor: pointer;
@@ -162,6 +161,7 @@ body {
 
 .split-container {
   margin: 0 auto;
+  margin-bottom: 10px;
   text-align: center;
   max-width: 52vw;
   border: 1px solid red;
